Fixed navigation spacing in Safari 18.3 (#7979)

--- a/src/templates/assets/stylesheets/main/components/_nav.scss
+++ b/src/templates/assets/stylesheets/main/components/_nav.scss
@@ -555,7 +555,9 @@
     // Hide nested navigation
     &__toggle ~ & {
       display: grid;
-      grid-template-rows: 0fr;
+      // Hack: we must set a minimum of 8px to work around a bug introduced in
+      // Safari 18.3, collapsing to a height of 0 – see https://t.ly/ViA3N
+      grid-template-rows: minmax(#{px2rem(8px)}, 0fr);
       visibility: collapse;
       opacity: 0;
       transition:
@@ -571,7 +573,7 @@
 
     // Show nested navigation when toggle is active or indeterminate
     &__toggle:is(:checked, .md-toggle--indeterminate) ~ & {
-      grid-template-rows: 1fr;
+      grid-template-rows: minmax(#{px2rem(8px)}, 1fr);
       visibility: visible;
       opacity: 1;
       transition:
@@ -726,7 +728,7 @@
       // Hack: Always show active navigation tab on breakpoint screen, despite
       // of checkbox being checked or not - see https://t.ly/Qc311
       .md-nav[data-md-level="1"] {
-        grid-template-rows: 1fr;
+        grid-template-rows: minmax(#{px2rem(8px)}, 1fr);
         visibility: visible;
         opacity: 1;
       }
